# statespacecheck-paper

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  LICENSE  PLAN.md  README.md  SCRATCHPAD.md  TASKS.md  TODO.md  pyproject.toml
.claude/commands/: freshstart.md
.github/workflows/: ci.yml
docs/: figure04_interactive_viewer_plan.md
figures/: figure01.py  figure02.py
manuscript/: .latexmkrc  LICENSE  Local-GoF-Paper.bib  Makefile  README.md  main.tex  preamble.tex  references.bib  supplement.tex
notebooks/: fig4.ipynb  figure04_viewer.ipynb  investigate_hpd_by_cell_type.ipynb  understanding_predictive_pvalue.ipynb
scripts/: benchmark_figure04_viewer.py  find_continuous_wins_windows.py  find_immobile_replay_windows.py  generate_all_figures.py  generate_figure01.py  generate_figure02.py  generate_figure03.py  generate_figure03_candidates.py  generate_figure04.py  run_decoding.py  sanity_check_figure04a.py  sanity_check_figure04b.py  state_space_schematic.py
src/statespacecheck_paper/: __init__.py  analysis.py  figure02_panels.py  figure03_demo.py  load_data.py  load_local_data.py  paths.py  plotting.py  predictive_check.py  real_data_analysis.py  real_data_plotting.py  schematic.py  simulation.py  style.py
src/statespacecheck_paper/interactive/: __init__.py  __main__.py  app.py  cache.py  data_source.py  panels.py  viewer.py
tests/: __init__.py  _synthetic_cache.py  conftest.py  test_analysis.py  test_basic.py  test_doctests.py  test_figure03_phases.py  test_figures.py  test_find_immobile_replay.py  test_interactive_cache.py  test_interactive_controls.py  test_interactive_data_source.py  test_interactive_metric_panels.py  test_interactive_simulation.py  test_interactive_slice_panel.py  test_interactive_viewer_smoke.py  test_load_data.py  test_package.py  test_plotting.py  test_predictive_check.py  test_properties.py  test_real_data_analysis.py  test_real_data_plotting.py  test_schematic.py  test_simulation.py  test_style.py
