[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "statespacecheck-paper"
version = "0.1.0"
description = "Source code and supplementary materials for the paper 'Goodness-of-fit diagnostics for state space models in neuroscience'"
authors = [
    { name = "Eric Denovellis", email = "eric.denovellis@ucsf.edu" },
    { name = "Sirui Zeng", email = "zengsr@bu.edu" },
    { name = "Uri T. Eden", email = "tzvi@bu.edu" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.0.0",
    "statespacecheck",
    "non_local_detector @ git+https://github.com/LorenFrankLab/non_local_detector.git",
    "spyglass-neuro",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "pre-commit>=3.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "NPY", # numpy-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# Notebooks have cell-based imports and exploration code
"notebooks/*.py" = ["E402", "F401", "F541"]
"notebooks/*.ipynb" = ["E402", "F401", "F821", "E501"]
# Tests use legacy numpy random for simplicity
"tests/*.py" = ["NPY002"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "matplotlib.*",
    "mpl_toolkits.*",
    "seaborn.*",
    "pandas.*",
    "networkx.*",
    "datajoint.*",
    "spyglass.*",
    "track_linearization.*",
    "statespacecheck.*",
    "joblib.*",
    "xarray.*",
    "non_local_detector.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--cov=src/statespacecheck_paper",
    "--cov-report=html",
    "--cov-report=term-missing",
]
